--- a/contactus.html
+++ b/contactus.html
@@ -146,149 +146,149 @@
 
 <!-- Footer -->
 <footer id="footer" class="footer-1">
-    <div class="main-footer widgets-dark typo-light">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="widget subscribe no-box">
-              <h5 class="widget-title">AIQ<span></span></h5>
-              <p>We are building solutions to tomorrow's challenges today
-                using geopspatial artificial intelligence.</p>
-            </div>
+  <div class="main-footer widgets-dark typo-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="widget no-box">
+           <a href="index.html"> <img  src="images2/AIQ LOGO 1.svg" alt="" width="50px" style="fill: white ;"></a>
+            <p>We are building solutions to tomorrow's challenges today
+              using geopspatial artificial intelligence.</p>
           </div>
+        </div>
 
-          <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="widget no-box">
-              <h5 class="widget-title">Menu<span></span></h5>
-              <ul class="thumbnail-widget">
-                <li>
-                  <div class="thumb-content">
-                    <a href="index.html">Home</a>
-                  </div>
-                </li>
-                <li>
-                  <div class="thumb-content">
-                    <a href="about.html">About</a>
-                  </div>
-                </li>
-                <li>
-                  <div class="thumb-content">
-                    <a href="#">What We do</a>
-                  </div>
-                </li>
-                <li>
-                  <div class="thumb-content">
-                    <a href="whatwedo.html">Who We Serve</a>
-                  </div>
-                </li>
-                <li>
-                  <div class="thumb-content">
-                    <a href="#updates">Latest Updates</a>
-                  </div>
-                </li>
-                <li>
-                  <div class="thumb-content"><a href="contactus.html">Contact</a></div>
-                </li>
-              </ul>
-            </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="widget no-box text-white">
+            <h5 class="widget-title">Menu<span></span></h5>
+            <ul class="thumbnail-widget">
+              <li>
+                <div class="thumb-content">
+                  <a href="index.html">Home</a>
+                </div>
+              </li>
+              <li>
+                <div class="thumb-content">
+                  <a href="about.html">About</a>
+                </div>
+              </li>
+              <li>
+                <div class="thumb-content">
+                  <a href="#">What We do</a>
+                </div>
+              </li>
+              <li>
+                <div class="thumb-content">
+                  <a href="#.">Who We Serve</a>
+                </div>
+              </li>
+              <li>
+                <div class="thumb-content">
+                  <a href="#updates">Latest Updates</a>
+                </div>
+              </li>
+              <li>
+                <div class="thumb-content"><a href="contactus.html">Contact</a></div>
+              </li>
+            </ul>
           </div>
+        </div>
 
-          <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="widget no-box">
-              <h5 class="widget-title">
-                Solutions And Services<span></span>
-              </h5>
-              <p>Get access to our solutions and services</p>
-              <a class="btn" href="#services" target="_blank"
-                >Click Here</a
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="widget no-box">
+            <h5 class="widget-title">
+              Solutions And Services<span></span>
+            </h5>
+            <p>Get access to our solutions and services</p>
+            <a class="btn" href="#services" target="_blank"
+              >Click Here</a
+            >
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="widget no-box">
+            <h5 class="widget-title">Contact Us<span></span></h5>
+
+            <p>
+              <a href="mailto:info@domain.com" title="glorythemes" style="color:#163d52; font-weight:bold;"
+                >aiq@infor.ng</a
               >
-            </div>
-          </div>
+            </p>
+            <ul class="social-footer2">
+              <li class="youtube text-white">
+                <a
+                  class="fa fa-youtube fa-lg text- fa-2x"
+                  aria-hidden="true"
+                  title="youtube"
+                  target="_blank"
+                  href="https://youtube.com"
+                  width="30"
+                  height="30"
+                  ><i alt="youtube" src=""></i>
+                </a>
+              </li>
 
-          <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="widget no-box">
-              <h5 class="widget-title">Contact Us<span></span></h5>
-
-              <p>
-                <a href="mailto:info@domain.com" title="glorythemes"
-                  >aiq@infor.ng</a
+              <li class="facebook">
+                <a
+                  class="fa fa-facebook fa-lg text- fa-2x"
+                  aria-hidden="true"
+                  title="facebook"
+                  target="_blank"
+                  href="https://facebook.com"
                 >
-              </p>
-              <ul class="social-footer2">
-                <li class="youtube text-white">
-                  <a
-                    class="fa fa-youtube fa-lg text- fa-2x"
-                    aria-hidden="true"
-                    title="youtube"
-                    target="_blank"
-                    href="https://youtube.com"
-                    width="30"
-                    height="30"
-                    ><i alt="youtube" src=""></i>
-                  </a>
-                </li>
+                </a>
+              </li>
 
-                <li class="facebook">
-                  <a
-                    class="fa fa-facebook fa-lg text- fa-2x"
-                    aria-hidden="true"
-                    title="facebook"
-                    target="_blank"
-                    href="https://facebook.com"
-                  >
-                  </a>
-                </li>
+              <li class="twitter">
+                <a
+                  class="fa fa-twitter fa-lg text- fa-2x"
+                  aria-hidden="true"
+                  title="twitter"
+                  target="_blank"
+                  href="https://twitter.com"
+                >
+                </a>
+              </li>
 
-                <li class="twitter">
-                  <a
-                    class="fa fa-twitter fa-lg text- fa-2x"
-                    aria-hidden="true"
-                    title="twitter"
-                    target="_blank"
-                    href="https://twitter.com"
-                  >
-                  </a>
-                </li>
+              <li class="instagram">
+                <a
+                  class="fa fa-instagram fa-lg text- fa-2x"
+                  aria-hidden="true"
+                  title="instagram"
+                  target="_blank"
+                  href="https://instagram.com"
+                >
+                </a>
+              </li>
+              <i class="" aria-hidden="true"></i>
 
-                <li class="instagram">
-                  <a
-                    class="fa fa-instagram fa-lg text- fa-2x"
-                    aria-hidden="true"
-                    title="instagram"
-                    target="_blank"
-                    href="https://instagram.com"
-                  >
-                  </a>
-                </li>
-                <i class="" aria-hidden="true"></i>
-
-                <li class="linkedin">
-                  <a
-                    class="fa fa-linkedin fa-lg text- fa-2x"
-                    aria-hidden="true"
-                    title="linkedin"
-                    target="_blank"
-                    href="https://linkedin.com"
-                  >
-                  </a>
-                </li>
-              </ul>
-            </div>
+              <li class="linkedin">
+                <a
+                  class="fa fa-linkedin fa-lg text- fa-2x"
+                  aria-hidden="true"
+                  title="linkedin"
+                  target="_blank"
+                  href="https://linkedin.com"
+                >
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="footer-copyright">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <p>Copyright Company Name © 2022. All rights reserved.</p>
-          </div>
+  <div class="footer-copyright">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <p>Copyright Company Name © 2022. All rights reserved.</p>
         </div>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
 
 
     <!-- Optional JavaScript -->
