--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           </div>
           <!--services-box-text-->
           <div class="s-b-text">
-            <a href="#"
+            <a href="#geoai"
               >Geospatial Artificial Intelligence (focus on Remote Sensing) AIQ uses remote sensing to gather information about human activity on earth acquired via the analysis of earth imagery and geospatial data that identifies, analyzes and usually shows physical features and spatially referenced activities.</a
             >
           </div>
@@ -232,7 +232,7 @@
           </div>
           <!--services-box-text-->
           <div class="s-b-text">
-            <a href="#"
+            <a href="#gidad"
               >Geospatial Intelligence and Data Analysis Database (focus on Geospatial Analysis and Workspaces for teams)</a
             >
           </div>
@@ -254,7 +254,7 @@
 
           <!--services-box-text-->
           <div class="s-b-text">
-            <a href="#"
+            <a href="#hrsi"
               >High resolution satellite imagery that can be used to improve decision making in all aspects of living ranging from Defence, environment and climate, agriculture, infrastructure engineering and government.</a
             >
           </div>
@@ -281,7 +281,7 @@
           </div>
           <!--services-box-text-->
           <div class="s-b-text">
-            <a href="#"
+            <a href="#vapt"
               >
               Vulnerability Assessment and Penetration Testing</a
             >
@@ -303,7 +303,7 @@
           </div>
           <!--services-box-text-->
           <div class="s-b-text">
-            <a href="#"
+            <a href="#sky-make"
               >Machine Learning And Knowledge Extraction</a>
           </div>
         </div>
@@ -324,7 +324,7 @@
 
           <!--services-box-text-->
           <div class="s-b-text">
-            <a href="#"
+            <a href="#data-camp"
               >Data Collection, Analysis and Mapping Platform Data Dashboards and Collection Interfaces</a
             >
           </div>
@@ -420,7 +420,7 @@ container container-fluid call-text my-5">
           </div>
 
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="widget no-box">
+            <div class="widget no-box text-white">
               <h5 class="widget-title">Menu<span></span></h5>
               <ul class="thumbnail-widget">
                 <li>
