--- a/whatwedo.html
+++ b/whatwedo.html
@@ -134,13 +134,13 @@
   <img src="images2/earth.png" style="width:100%" alt="">
 <!-- what-we-d0-text -->
   <div class=" wwd-text ">
-    <p>Geospatial Artificial Intelligence (focus on Remote Sensing) AIQ uses remote sensing to gather information about human activity on earth acquired via the analysis of earth imagery and geospatial data that identifies, analyzes and usually shows physical features and spatially referenced activities.</p> 
+    <p id="geoai">Geospatial Artificial Intelligence (focus on Remote Sensing) AIQ uses remote sensing to gather information about human activity on earth acquired via the analysis of earth imagery and geospatial data that identifies, analyzes and usually shows physical features and spatially referenced activities.</p> 
   </div>
 </div>
 <!-- what we do box 2-------------->
 <div class="wwd-box m-2">
   <!-- what-we-do-heading-->
-<h2>GIDAD</h2>
+<h2 id="gidad">GIDAD</h2>
   <img src="images2/lukas-blazek-mcSDtbWXUZU-unsplash.jpg" style="width:100%" alt="" >
 <!-- what-we-d0-text -->
 <div class=" wwd-text ">
@@ -151,7 +151,7 @@
 <!-- what we do box 3-------------->
 <div class="wwd-box m-2">
   <!-- what-we-do-heading-->
-<h2>HRSI</h2>
+<h2 id="hrsi">HRSI</h2>
  <img src="images2/nasa-Yj1M5riCKk4-unsplash.jpg" style="width:100%" alt="">
 <!-- what-we-d0-text -->
   <div class=" wwd-text ">
@@ -162,7 +162,7 @@
 <!-- what we do box 4-------------->
 <div class="wwd-box m-2">
   <!-- what-we-do-heading-->
-<h2>VAPT</h2>
+<h2 id="vapt">VAPT</h2>
   <img src="images2/adi-goldstein-EUsVwEOsblE-unsplash.jpg" style="width:100%" alt="">
 <!-- what-we-d0-text -->
   <div class=" wwd-text ">
@@ -173,7 +173,7 @@
 <!-- what we do box 5-------------->
 <div class="wwd-box m-2">
   <!-- what-we-do-heading-->
-<h2>SKY-MAKE</h2>
+<h2 id="sky-make">SKY-MAKE</h2>
   <img src="images2/markus-winkler-f57lx37DCM4-unsplash.jpg" alt="" style="width:100%">
 <!-- what-we-d0-text -->
   <div class=" wwd-text ">
@@ -184,7 +184,7 @@
 <!-- what we do box 6-------------->
 <div class="wwd-box  m-2">
   <!-- what-we-do-heading-->
-<h2>DATA-CAMP</h2>
+<h2 id="data-camp">DATA-CAMP</h2>
   <img src="images2/chris-liverani-dBI_My696Rk-unsplash.jpg" alt="" style="width:100%">
 <!-- what-we-d0-text -->
   <div class="wwd-text">
@@ -201,15 +201,15 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-3">
-          <div class="widget subscribe no-box">
-            <h5 class="widget-title">AIQ<span></span></h5>
+          <div class="widget no-box">
+           <a href="index.html"> <img  src="images2/AIQ LOGO 1.svg" alt="" width="50px" style="fill: white ;"></a>
             <p>We are building solutions to tomorrow's challenges today
               using geopspatial artificial intelligence.</p>
           </div>
         </div>
 
         <div class="col-xs-12 col-sm-6 col-md-3">
-          <div class="widget no-box">
+          <div class="widget no-box text-white">
             <h5 class="widget-title">Menu<span></span></h5>
             <ul class="thumbnail-widget">
               <li>
@@ -261,7 +261,7 @@
             <h5 class="widget-title">Contact Us<span></span></h5>
 
             <p>
-              <a href="mailto:info@domain.com" title="glorythemes"
+              <a href="mailto:info@domain.com" title="glorythemes" style="color:#163d52; font-weight:bold;"
                 >aiq@infor.ng</a
               >
             </p>
